--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<h2> <p> <mark> Dox Moneydog</mark> </p> </h2>
 	Dox Moneydog é um cachorro caramelo também brasileiro. Ele é o mais velho dos irmãos, Ganhou 5 troféus em golfe, 4 em basquete, 6 em futebol, adora moedas gigantes e bebe 2l de água por dia. Ele gosta muito de malhar, tanto que ele é BODYBUILDER. Ele gosta muito de esportes e gosta da maioria dos empregos que já teve. Ele usa uma bermuda azul-claro e fica descalço. É o único cachorro que tem restos de barba. Ele gosta muito de um jogo chamado... EI, não posso falar isso, pois é uma das minhas próximas criações. Dox é chato às vezes, mas também é muito cachorro-boa. Dox já nasceu com pequenos músculos, mas ficou BODYBUILDER quando cresceu, BIR!!!.
 	Assim como seu irmão Doug Moneydog, Dox Moneydog também quer ir para a lua!<br />
-	<img src="doxmoneydog.jpeg" width="450" height="800"
+	<img src="doxmoneydog.jpeg" width="450" height="800">
         
     <h2> <p> <mark> Dock Moneydog </mark> </p> </h2>
 	Dock Moneydog é um cachorro caramelo também, e também é brasileiro. Dock é HACKER (do bem e do mal), ama piadas ruins, é o mais novo dos irmãos e o mais inteligente é ele. Ele é o mais novo dos 3 irmãos. Ele é um cachorro sem braçinhos, você deve se perguntar: "MAS GUIFORNAI, ELE É DEFICIENTE? ELE NÃO TEM BRAÇOS!", Ele não tem braços, mas ele tem mãos. As mãos dele só aparecem quando ele quer. Exemplo: Dock quer beber um gole de vitamina, as mãos dele surgem, por que ele quer pegar o copo para beber o gole, dai ele toma, guarda o copo onde estava e "desativa" as mãos dele. Dock parece um Tripulante do jogo Among Us, da Innersloth. Ele também queria ir pra lua! <br />
